--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.5",
     "express": "^4.15.2",
+    "express-session": "^1.17.2",
+    "pg": "^8.6.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
